k8s/flux/apps/collabora/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collabora
  annotations:
    helm.sh/resource-policy: keep
  labels:
    app: collabora
spec:
  type: ClusterIP
  selector:
    app: collabora
  ports:
    - name: http
      port: 9980
      targetPort: http
