k8s/flux/apps/collabora/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora
  annotations:
    helm.sh/resource-policy: keep
  labels:
    app: collabora
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "collabora.cute.haus"
      secretName: cute-haus-tls
  rules:
    - host: "collabora.cute.haus"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collabora
                port:
                  number: 9980
